# Vacancy

./: pyproject.toml
authentication/: models.py  serializers.py  urls.py  views.py
authentication/migrations/: 0001_initial.py
companies/: models.py  urls.py  views.py
companies/migrations/: 0001_initial.py
p1/: settings.py  urls.py
vac/: admin.py  models.py  serializers.py  urls.py  views.py
vac/migrations/: 0001_initial.py  0002_vacancy_created_vacancy_slug_vacancy_status.py  0003_vacancy_user.py  0004_skill_vacancy_skills.py  0005_alter_skill_options_alter_vacancy_options.py  0006_skill_is_active.py  0007_vacancy_likes.py
